# ohlami

./: .gitignore  .pre-commit-config.yaml  README.md  _typos.toml  pyproject.toml  pyrightconfig.json  ruff.toml
src/ohlami/: __init__.py
tests/: default_test.py
